--- a/cmos/source/module/cmos/cmos.ini
+++ b/cmos/source/module/cmos/cmos.ini
@@ -2,32 +2,14 @@
 [package]
 desc= settings and control of cmos
 enable=1
-maintanier=tbsa-BJ
+maintanier=duanjigang
 
 [status]
 desc= show status of cmos
 enable=1
+user=root
 
-[version]
-desc= show version of cmos
-enable=1
-user=nobody
 
-[gi]
-desc=gemstone install
-enable=1
-
-[genrepo]
-desc=generate ops.rep 
-enable=1
-
-[check_host]
-desc=check host name
-enable=1
-
-[check_version]
-desc=check version of a package
-enable=1
 
 [rpminfo]
 desc=show information of a rpm
@@ -37,6 +19,13 @@ enable=1
 desc=check rpm block status or fix it
 enable=1
 
+[hostname]
+desc=show hostname of this box
+enable=1
+cmdpath=/bin/hostname
+user=cme
 
-
-
+[welcome]
+desc=just show welcome messages
+enable=1
+user=nobody
