define 'Group' of rpm as user specified in 'index.yaml'

--- a/multipkg/index.yaml
+++ b/multipkg/index.yaml
@@ -3,6 +3,9 @@ default:
     version: '1.2'
     summary: Automation for package builds (supports RPM, deb)
     buildprefix: /usr
+    #modified by duanjigang
+    group: 'cmesoft'
+    #modified by duanjigang
 rpm:
     arch: noarch
     provides:
