--- a/multipkg/root/usr/share/multipkg/templates/spec.template
+++ b/multipkg/root/usr/share/multipkg/templates/spec.template
@@ -3,7 +3,10 @@ Name: %name%
 Version: %version%
 Release: %release%
 License: %license%
-Group: Local
+####mod by duanjigang
+#Group: Local
+Group: %group%
+###mod by duanjigang
 Provides: %name% %providelist%
 Packager: %whoami%
 BuildRoot: %buildroot%
