adding yumclone and modify packager defination of mutipkg

--- a/multipkg/root/usr/share/multipkg/templates/spec.template
+++ b/multipkg/root/usr/share/multipkg/templates/spec.template
@@ -8,7 +8,8 @@ License: %license%
 Group: %group%
 ###mod by duanjigang
 Provides: %name% %providelist%
-Packager: %whoami%
+#Packager: %whoami%
+Packager: %packager%
 BuildRoot: %buildroot%
 BuildArch: %arch%
 autoreqprov: no
