--- a/repobuilder/source/Makefile
+++ b/repobuilder/source/Makefile
@@ -2,24 +2,20 @@ LIBS=  -g  -Wl,--enable-new-dtags -Wl,-rpath, -lpthread
 INC= -g   -D__LINUX__ -c -Wall -I./ -Wall -O2
 CC=gcc
 EXE=repobuilder
-$(EXE):IniHelper.o LogHelper.o main.o configserver.o NetHelper.o \
-	IniHelper.o LogHelper.o   cmthread.o comm_utils.o  daemon.o
-	$(CC) -o $(EXE) $(LIBS) IniHelper.o  NetHelper.o \
-	LogHelper.o main.o configserver.o  cmthread.o comm_utils.o  daemon.o
-cmdserver.o:main.c *.h
-	$(CC) $(INC) main.c
+$(EXE):inihelper.o loghelper.o main.o configserver.o nethelper.o main.o inihelper.o loghelper.o   cmthread.o daemon.o
+	$(CC) -o $(EXE) $(LIBS) inihelper.o  nethelper.o loghelper.o main.o configserver.o  cmthread.o daemon.o
+main.o:main.c *.h
+	$(CC) $(INC) main.c 
 configserver.o:configserver.c *.h
 	$(CC) $(INC) configserver.c
-LogHelper.o:LogHelper.c *.h
-	$(CC) $(INC) LogHelper.c
-IniHelper.o:IniHelper.c *.h
-	$(CC) $(INC) IniHelper.c
+loghelper.o:loghelper.c *.h
+	$(CC) $(INC) loghelper.c
+inihelper.o:inihelper.c *.h
+	$(CC) $(INC) inihelper.c
 cmthread.o:cmthread.c *.h
 	$(CC) $(INC) cmthread.c
-NetHelper.o:NetHelper.c *.h
-	$(CC) $(INC) NetHelper.c
-comm_utils.o:comm_utils.c *.h
-	$(CC) $(INC) comm_utils.c
+nethelper.o:nethelper.c *.h
+	$(CC) $(INC) nethelper.c
 daemon.o:daemon.c *.h
 	$(CC) $(INC) daemon.c
 clean:
