--- a/cmos/index.yaml
+++ b/cmos/index.yaml
@@ -6,6 +6,7 @@ default:
     - daemontools
   summary: Unified platform of agent program for configuration managment by duanjigang
   version: '1.1.0'
+  release: '1'
   group: 'cmesoft'
   packager: 'duanjigang'
   license: 'cmesoft'
