--- a/repobuilder/index.yaml
+++ b/repobuilder/index.yaml
@@ -5,6 +5,7 @@ default:
     - createrepo >= 0.4.11
   summary: muti-thread tasks to update repo of yum server
   version: '1.1.0'
+  release: '1'
   group: 'cmesoft'
   packager: 'duanjigang'
   license: 'cmesoft'
