--- a/yumclone/index.yaml
+++ b/yumclone/index.yaml
@@ -1,5 +1,6 @@
 default:
-  name: superviseyumclone
+  #name: superviseyumclone
+  name: yumclone
   requires:
     - rsync >= 3.0.6
   version: '1.0.0'
