--- a/pkg-release/index.yaml
+++ b/pkg-release/index.yaml
@@ -1,14 +1,15 @@
 default:
   name: pkgrelease
   version: '1.1.0'
-  release: '1'
+  release: '2'
   arch: noarch
   summary: "smart tools to release pkg [rpm] to specified yumserver"
   packager: 'duanjigang1983'
   group: 'cmesoft'
   arch: 'noarch'
-
-  keepopt: 
-      - %config(noreplace) /etc/pkgrelease.conf
-      - %defattr(-,root,root) 
-      - %attr(0777 nobody nobody) /etc/pkgrelease.conf
+  files:
+    - "/etc/pkgrelease.conf": 
+        group: "root"
+        perm:  "0666"
+        owner: "root"
+        config: "yes"
