--- a/repobuilder/index.yaml
+++ b/repobuilder/index.yaml
@@ -5,13 +5,14 @@ default:
     - createrepo >= 0.4.11
   summary: muti-thread tasks to update repo of yum server
   version: '1.1.0'
-  release: '1'
+  release: '2'
   group: 'cmesoft'
   packager: 'duanjigang'
   license: 'cmesoft'
-  #the multipkg do not support config file for rpm-->need update
-  keepopt: 
-      - %config(noreplace) /etc/repo.conf
-      - %defattr(-,root,root) 
-      - %attr(0777 nobody nobody) /etc/repo.conf
+  files:
+    - "/etc/repo.conf": 
+        group: "root"
+        perm:  "0666"
+        owner: "root"
+        config: "yes"
 
