adding basedir in conf and branch for develop

--- a/repobuilder/source/repo.conf
+++ b/repobuilder/source/repo.conf
@@ -3,27 +3,92 @@
 interval=36
 thread_num=30
 signalfile=update.txt
+basedir=/home/yum
 
 [repo]
-path=/home/yum/extras/5Server/i386
+path=extras/5Server/i386
 on=1
 interval = 100
 
 [repo]
-path=/home/yum/extras/5Server/x86_64
+path=extras/5Server/x86_64
 on=1
 interval=12
 
 [repo]
-path=/home/yum/extras/5Server/noarch
+path=extras/5Server/noarch
 on=1
 interval = 20
 
 [repo]
-path=/home/yum/develop/5/x86_64/test
+path=extras/6Server/i386
+on=1
+interval = 100
+
+[repo]
+path=extras/6Server/x86_64
+on=1
+interval=12
+
+[repo]
+path=extras/6Server/noarch
+on=1
+interval = 20
+
+
+[repo]
+path=develop/5Server/x86_64/test
 on=1
 
 [repo]
-path=/home/yum/develop/5/x86_64/stable
+path=develop/5Server/x86_64/stable
 on=1
 interval = 25
+
+[repo]
+path=develop/5Server/noarch/test
+on=1
+
+[repo]
+path=develop/5Server/noarch/stable
+on=1
+interval = 26
+
+[repo]
+path=develop/5Server/i386/test
+on=1
+interval=3600
+
+[repo]
+path=develop/5Server/i386/stable
+on=1
+interval = 3600
+
+[repo]
+path=develop/6Server/x86_64/test
+on=1
+
+[repo]
+path=develop/6Server/x86_64/stable
+on=1
+interval = 25
+
+[repo]
+path=develop/6Server/noarch/test
+on=1
+
+[repo]
+path=develop/6Server/noarch/stable
+on=1
+interval = 25
+
+[repo]
+path=develop/6Server/i386/test
+on=1
+interval=3600
+
+[repo]
+path=develop/6Server/i386/stable
+on=1
+interval = 3600
+
