--- a/multipkg/index.yaml
+++ b/multipkg/index.yaml
@@ -2,10 +2,12 @@ default:
     name: multipkg
     version: '1.2'
     release: '2'
-    summary: Automation for package builds (supports RPM, deb,but do not support config file now in rpm)
+    summary: Automation for package builds (supports RPM, deb,adding config file support by duanjigang)
     buildprefix: /usr
     #modified by duanjigang
     group: 'cmesoft'
+    packager: 'duanjigang'
+    license: 'cmesoft'
     #modified by duanjigang
 rpm:
     arch: noarch
